--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -442,82 +442,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank"><b>KK加速</b></a>
-                                </div>
-                                <div class="panel-body">
-                                    
-                                    <dl>
-                                        <dt>资费</dt>
-                                                                                <dd>
-                                            <p>
-                                                <label>Pro | 不限时：</label> ¥68.00 /一次性。 
-                                                                                                不限时200G高速流量; 
-                                                                                                不限速，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>Air | 不限时：</label> ¥38.00 /一次性。 
-                                                                                                不限时100G高速流量; 
-                                                                                                不限速，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>专业级：</label> ¥18.00 /每月。 
-                                                                                                每月500G高速流量; 
-                                                                                                1Gbps带宽，畅享极速网络; 
-                                                                                                仅限小团体使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>体验级：</label> ¥8.00 /每月。 
-                                                                                                每月168G高速流量; 
-                                                                                                300Mbps带宽，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>体验级：</label> ¥8.00 /每月。 
-                                                                                                每月168G高速流量; 
-                                                                                                300Mbps带宽，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                            </dl>
-                                </div>
-                                <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank">点击查看</a>
-                                </div>
-                            </div>
-                            <hr />
-                                                        <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -559,7 +484,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -626,16 +551,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-75559.htm" title="给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）">给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-free-v2ray.htm" title="VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-84552.htm" title="RabbitMQ数据同步一致性解决方案">RabbitMQ数据同步一致性解决方案</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-9-node-share-links.htm" title="VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-78943.htm" title="猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）">猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）</a></li>
-                        <li class="py-2"><a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求">Apache Tomcat如何高并发处理请求</a></li>
-                        <li class="py-2"><a href="/news/article-72881.htm" title="动物疫苗哪个好 动物疫苗品牌">动物疫苗哪个好 动物疫苗品牌</a></li>
-                        <li class="py-2"><a href="/news/article-83125.htm" title="动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）">动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）</a></li>
-                        <li class="py-2"><a href="/news/article-70891.htm" title="动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）">动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）</a></li>
-                        <li class="py-2"><a href="/news/article-72880.htm" title="Docker极简入门：使用Docker-Compose 搭建redis集群">Docker极简入门：使用Docker-Compose 搭建redis集群</a></li>
+                        <li class="py-2"><a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）">宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）">宠物狗批发网站大全（宠物狗批发价格）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-78942.htm" title="Zookeeper 基本概念">Zookeeper 基本概念</a></li>
+                        <li class="py-2"><a href="/news/article-85270.htm" title="合肥宠物领养网站 合肥宠物领养网站有哪些">合肥宠物领养网站 合肥宠物领养网站有哪些</a></li>
+                        <li class="py-2"><a href="/news/article-72218.htm" title="农大动物医院几点关门 农大动物医院几点关门营业">农大动物医院几点关门 农大动物医院几点关门营业</a></li>
+                        <li class="py-2"><a href="/news/article-82404.htm" title="狗粮加工厂利润成本分析图表（狗粮加工厂需要什么手续）">狗粮加工厂利润成本分析图表（狗粮加工厂需要什么手续）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点">VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-74203.htm" title="Typora + EasyBlogImageForTypora直接上传图片到博客园_在线工具">Typora + EasyBlogImageForTypora直接上传图片到博客园_在线工具</a></li>
                     </ul>
     </div>
 </div>
@@ -647,7 +572,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
