--- a/date/2025-03/page-3.htm
+++ b/date/2025-03/page-3.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-74202.htm" title="PYQT5(13)-基本窗口控件-拖曳与剪贴板">PYQT5(13)-基本窗口控件-拖曳与剪贴板</a></li>
-                        <li class="py-2"><a href="/news/article-78292.htm" title="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）">宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-v2ray.htm" title="VPN网关 | 3月10日19.3M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月10日19.3M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-81710.htm" title="动物疫苗gmp认证（动物疫苗gmp认证查询）">动物疫苗gmp认证（动物疫苗gmp认证查询）</a></li>
-                        <li class="py-2"><a href="/news/article-86702.htm" title="动物医院主管部门是谁负责（动物医院监管部门）">动物医院主管部门是谁负责（动物医院监管部门）</a></li>
-                        <li class="py-2"><a href="/news/article-90910.htm" title="开个宠物美容店需要多少钱,五线城市（开一家宠物美容店都需要一些什么）">开个宠物美容店需要多少钱,五线城市（开一家宠物美容店都需要一些什么）</a></li>
+                        <li class="py-2"><a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参">机器学习系列：LightGBM 可视化调参</a></li>
+                        <li class="py-2"><a href="/news/article-78943.htm" title="猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）">猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）</a></li>
                         <li class="py-2"><a href="/news/article-85271.htm" title="动物疫苗的重要性有哪些内容（动物疫苗的重要性有哪些内容呢）">动物疫苗的重要性有哪些内容（动物疫苗的重要性有哪些内容呢）</a></li>
-                        <li class="py-2"><a href="/news/article-83844.htm" title="vuex几大模块和Vuex助手使用详解">vuex几大模块和Vuex助手使用详解</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-2-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-90363.htm" title="宠物粮品牌排行前十（宠物粮食品牌排名）">宠物粮品牌排行前十（宠物粮食品牌排名）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-node-subscribe.htm" title="VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 4月10日21.2M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-83845.htm" title="动物疫苗种类及类型分类图解（动物疫苗的种类）">动物疫苗种类及类型分类图解（动物疫苗的种类）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">VPN网关 | 3月30日22.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-14-free-v2ray.htm" title="VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月14日18.3M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-84552.htm" title="RabbitMQ数据同步一致性解决方案">RabbitMQ数据同步一致性解决方案</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
